k8s/manifest/istio/open-match/query/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: open-match-query
  namespace: open-match
spec:
  host: open-match-query.open-match.svc.cluster.local
  subsets:
  - name: default
    labels:
      app: open-match
      component: query
      release: open-match
    trafficPolicy:
      connectionPool:
        tcp:
          connectTimeout: 300s
        http:
          http2MaxRequests: 4000
          idleTimeout: 300s
