k8s/manifest/istio/open-match/query/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: open-match-query
  namespace: open-match
spec:
  hosts:
  - open-match-query.open-match.svc.cluster.local
  http:
  - name: long-connection
    route:
    - destination:
        host: open-match-query.open-match.svc.cluster.local
        port:
          number: 50503
        subset: long-connection
    timeout: 300s
    retries:
      attempts: 10
      perTryTimeout: 300ms
      retryOn: 5xx,unavailable,internal,deadline-exceeded,cancelled
